[package]
name = "hamt"
description = "Purely functional hash array mapped tries."
homepage = "https://github.com/rainbowbismuth/hamt-rs"
repository = "https://github.com/rainbowbismuth/hamt-rs"
documentation = "http://rainbowbismuth.github.io/rustdoc/hamt/"
version = "0.1.7"
authors = ["Emily A. Bellows <emily.a.bellows@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
clippy = {version = "*", optional = true}

[dev-dependencies]
quickcheck = "^0.2.24"

[features]
default=[]
